<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="help.desk.mobile.app.fragment.TicketAdminActionsFragment">

    <EditText
        android:id="@+id/ticket_admin_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="5"
        android:maxLines="5"
        android:minLines="1"
        app:layout_constraintBottom_toTopOf="@+id/approve_ticket_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticket_message_text"
        android:textColor="@color/pureBlack"
        app:layout_constraintBottom_toTopOf="@+id/ticket_admin_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="@+id/ticket_admin_message" />

    <Button
        android:id="@+id/refuse_ticket_button"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:backgroundTint="@color/error"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/refuse_ticket_button"
        android:textColor="@color/textPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/approve_ticket_button"
        app:layout_constraintVertical_bias="0.077" />

    <Button
        android:id="@+id/approve_ticket_button"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:backgroundTint="@color/success"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/approve_ticket_button"
        android:textColor="@color/textPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562" />
</androidx.constraintlayout.widget.ConstraintLayout>
