<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="help.desk.mobile.app.fragment.CreateTicketFragment">

    <Button
        android:id="@+id/create_ticket_button"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/create_ticket_button"
        android:textColor="@color/textPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_ticket_area_spinner" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/description_text"
        android:textColor="@color/pureBlack"
        app:layout_constraintBottom_toTopOf="@+id/create_ticket_description"
        app:layout_constraintStart_toStartOf="@+id/create_ticket_description" />

    <EditText
        android:id="@+id/create_ticket_title"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="textCapSentences"
        android:maxLength="50"
        android:textAlignment="viewStart"
        android:textColor="@color/pureBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="112dp"
        android:text="@string/create_ticket_area_text"
        android:textColor="@color/pureBlack"
        app:layout_constraintBottom_toTopOf="@+id/create_ticket_area_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="@+id/create_ticket_area_spinner" />

    <Spinner
        android:id="@+id/create_ticket_area_spinner"
        android:layout_width="214dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:scrollbarSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_ticket_description" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="help.desk.mobile.app.fragment.CreateTicketFragment"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="13dp">

            <TextView
                android:id="@+id/ticketDetailsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/create_ticket_screen_title"
                android:textAllCaps="true"
                android:textColor="@color/textPrimary"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/title_text"
        android:textColor="@color/pureBlack"
        app:layout_constraintBottom_toTopOf="@+id/create_ticket_title"
        app:layout_constraintStart_toStartOf="@+id/create_ticket_title" />

    <EditText
        android:id="@+id/create_ticket_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="5"
        android:maxLines="5"
        android:minLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_ticket_title" />
</androidx.constraintlayout.widget.ConstraintLayout>
