<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="help.desk.mobile.app.fragment.EditAccountFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="help.desk.mobile.app.fragment.CreateTicketFragment"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="13dp">

            <TextView
                android:id="@+id/ticketDetailsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_account_screen_title"
                android:textAllCaps="true"
                android:textColor="@color/textPrimary"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/edit_account_phone_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="phone"
        android:maxLength="11"
        android:textAlignment="viewStart"
        android:textColor="@color/pureBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area_text"
        android:textColor="@color/pureBlack"
        app:layout_constraintBottom_toTopOf="@+id/edit_account_area_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="@+id/edit_account_area_spinner" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="392dp"
        android:text="@string/edit_account_confirm_password"
        android:textColor="@color/pureBlack"
        app:layout_constraintBottom_toTopOf="@+id/edit_account_confirm_password_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="@+id/edit_account_confirm_password_edit_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/edit_account_confirm_password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:maxLength="32"
        android:textAlignment="viewStart"
        android:textColor="@color/pureBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_account_password_edit_text" />

    <EditText
        android:id="@+id/edit_account_password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:maxLength="32"
        android:textAlignment="viewStart"
        android:textColor="@color/pureBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_account_area_spinner" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        android:textColor="@color/pureBlack"
        app:layout_constraintBottom_toTopOf="@+id/edit_account_password_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="@+id/edit_account_confirm_password_edit_text" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_text"
        android:textColor="@color/pureBlack"
        app:layout_constraintBottom_toTopOf="@+id/edit_account_phone_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="@+id/edit_account_phone_edit_text" />

    <Spinner
        android:id="@+id/edit_account_area_spinner"
        android:layout_width="214dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:scrollbarSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_account_phone_edit_text" />

    <Button
        android:id="@+id/edit_account_button"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/edit_account_button_action"
        android:textColor="@color/textPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_account_confirm_password_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
